--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   cloud_firestore: ^4.9.2
   firebase_storage: ^11.2.7
   shared_preferences: ^2.2.1
-
+  font_awesome_flutter: ^10.5.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
